beautified and resolved homepage overlap

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,4 @@
 /* ====== FOOTER - Priti ====== */
-
 footer {
   color: $septenary-color;
   text-align: center;
@@ -10,7 +9,6 @@ footer {
   right: 0;
 }
 
-.homepage
-{
+.homepage {
   position: absolute;
 }
